--- a/src/CtrlMoney.UI.Web/Views/B3/UploadEarning.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/B3/UploadEarning.cshtml
@@ -1,8 +1,83 @@
-﻿
+﻿@model CtrlMoney.UI.Web.Models.SingleFileModel
 @{
     ViewData["Title"] = "UploadEarning";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>UploadEarning</h1>
+<!-- Content Wrapper. Contains page content -->
+<div class="content-wrapper">
+    <!-- Content Header (Page header) -->
+    <div class="content-header">
+        <div class="container-fluid">
+            <div class="row mb-2">
+                <div class="col-sm-6">
+                    <h1 class="m-0 text-dark">Upload Earning</h1>
+                </div><!-- /.col -->
+                <div class="col-sm-6">
+                    <ol class="breadcrumb float-sm-right">
+                        <li class="breadcrumb-item"><a href="#">Home</a></li>
+                        <li class="breadcrumb-item active">Upload Earning</li>
+                    </ol>
+                </div><!-- /.col -->
+            </div><!-- /.row -->
+        </div><!-- /.container-fluid -->
+    </div>
+    <!-- /.content-header -->
+    <!-- Main content -->
+    <section class="content">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <!-- general form elements -->
+                    <div class="card card-primary">
+                        <div class="card-header">
+                            <h3 class="card-title">Quick Example</h3>
+                        </div>
+                        <!-- /.card-header -->
+                        <!-- form start -->
+                        <form asp-action="UploadEarning" asp-controller="B3" method="post" enctype="multipart/form-data">
+                            <div class="card-body">
+                                <div class="form-group">
+                                    <label for="IdFileName">File Name</label>
+                                    <input asp-for="FileName" type="text" class="form-control" id="IdFileName" placeholder="Enter email">
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleInputFile">File input</label>
+                                    <div class="input-group">
+                                        <div class="custom-file">
+                                            <input asp-for="File" type="file" class="custom-file-input" id="exampleInputFile">
+                                            <label class="custom-file-label" for="exampleInputFile">Choose file</label>
+                                        </div>
+                                        <div class="input-group-append">
+                                            <span class="input-group-text">Upload</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- /.card-body -->
 
+                            <div class="card-footer">
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                            </div>
+                        </form>
+                    </div>
+                    <!-- /.card -->
+                </div>
+                <!-- /.col -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container-fluid -->
+    </section>
+
+    <!-- /.content -->
+</div>
+<!-- /.content-wrapper -->
+<!-- bs-custom-file-input -->
+<script src="~/lib/bs-custom-file-input/bs-custom-file-input.min.js"></script>
+
+<script>
+$(function () {
+  bsCustomFileInput.init();
+});
+</script>
