--- a/src/CtrlMoney.UI.Web/Views/B3/UploadPosition.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/B3/UploadPosition.cshtml
@@ -12,12 +12,12 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1 class="m-0 text-dark">Upload Transaction</h1>
+                    <h1 class="m-0 text-dark">UploadPosition</h1>
                 </div><!-- /.col -->
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item active">Upload Transaction</li>
+                        <li class="breadcrumb-item active">UploadPosition</li>
                     </ol>
                 </div><!-- /.col -->
             </div><!-- /.row -->
