--- a/src/CtrlMoney.UI.Web/Views/IncomeTax/Index.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/IncomeTax/Index.cshtml
@@ -36,18 +36,21 @@
                             <table id="tbIncomesTaxes" class="table table-bordered">
                                 <thead>
                                     <tr>
-                                        <th>TicketCode</th>                                       
+                                        <th></th>
+                                        <th>TicketCode</th>
                                         <th>LastDate</th>
                                         <th>LastTotalValue</th>
+                                        <th>LastQuantity</th>
                                         <th>CurrentDate</th>
                                         <th>CurrentTotalValue</th>
+                                        <th>CuurentQuantity</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                 </tbody>
                             </table>
                         </div>
-                 
+
                     </div>
                     <!-- /.card -->
                 </div>
@@ -58,15 +61,50 @@
 </div>
 <!-- /.content-wrapper -->
 <script type="text/javascript">
+    var table;
+
+    /* Formatting function for row details - modify as you need */
+    function format(d) {
+        // `d` is the original data object for the row
+        return (
+            '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">' +
+            '<tr>' +
+            '<td>Full name:</td>' +
+            '<td>' +
+            d.name +
+            '</td>' +
+            '</tr>' +
+            '<tr>' +
+            '<td>Extension number:</td>' +
+            '<td>' +
+            d.extn +
+            '</td>' +
+            '</tr>' +
+            '<tr>' +
+            '<td>Extra info:</td>' +
+            '<td>And any further details here (images etc)...</td>' +
+            '</tr>' +
+            '</table>'
+        );
+    }
+
+    function getDiv() {
+        return "<div></div>";
+    }
 
     function loadTableIncomesTaxes() {
-        $('#tbIncomesTaxes').dataTable({
+        table = $('#tbIncomesTaxes').DataTable({
             "sAjaxSource": '/IncomeTax/GetAjaxHandlerIncomesTaxes',
             "bProcessing": true,
             "bServerSide": false,
             "paginate": true,
             "bDestroy": true,
             "aoColumns": [
+                {
+                    "mData": null,
+                    "className": 'dt-control',
+                    "defaultContent": '<i class="fas fa-plus-circle"></i>'
+                },
                 {
                     "mData": "TicketCode",
                     "bSortable": true,
@@ -83,6 +121,11 @@
                     "defaultContent": "<i>LastTotalValue</i>",
                 },
                 {
+                    "mData": "LastQuantity",
+                    "bSortable": true,
+                    "defaultContent": "<i>LastQuantity</i>",
+                },
+                {
                     "mData": "CurrentDate",
                     "bSortable": true,
                     "defaultContent": "<i>CurrentDate</i>",
@@ -91,12 +134,42 @@
                     "mData": "CurrentTotalValue",
                     "bSortable": true,
                     "defaultContent": "<i>CurrentTotalValue</i>",
+                },
+                {
+                    "mData": "CurrentQuantity",
+                    "bSortable": true,
+                    "defaultContent": "<i>CurrentQuantity</i>",
                 }
-               
             ]
         });
     }
+
     jQuery(document).ready(function() {
+
+        // Add event listener for opening and closing details
+        $('#tbIncomesTaxes tbody').on('click', 'td.dt-control', function() {
+            var tr = $(this).closest('tr');
+            var row = table.row(tr);
+             var ticket = row.data().TicketCode;
+
+            if (row.child.isShown()) {
+                // This row is already open - close it
+                row.child.hide();
+                tr.removeClass('shown');
+            } else {
+                // Open this row
+                
+                var url = '@Url.Action("Details","IncomeTax")?ticketCode=' + ticket;
+
+                $.get(url, function(data) {
+                    row.child(data).show();
+                });
+
+                tr.addClass('shown');
+
+            }
+        });
+
         loadTableIncomesTaxes();
     });
 </script>
