--- a/src/CtrlMoney.UI.Web/Views/Shared/_Layout.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/Shared/_Layout.cshtml
@@ -200,15 +200,45 @@ scratch. This page gets rid of all links and provides the needed markup only.
                                     </a>
                                 </li>
                                 <li class="nav-item">
+                                    <a href="@Url.Action("UploadTransaction", "B3")" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Upload Transaction</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
                                     <a href="@Url.Action("PositionIndex", "B3")" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Positions</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
+                                    <a href="@Url.Action("UploadPosition", "B3")" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Upload Positions</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
                                     <a href="@Url.Action("EarningIndex", "B3")" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Earnings</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="@Url.Action("UploadEarning", "B3")" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Upload Earnings</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="@Url.Action("MovementIndex", "B3")" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Movements</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="@Url.Action("UploadMovement", "B3")" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Upload Movements</p>
                                     </a>
                                 </li>
                             </ul>
