Income Tax fixes

--- a/src/CtrlMoney.UI.Web/Views/B3/UploadTransaction.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/B3/UploadTransaction.cshtml
@@ -31,16 +31,12 @@
                     <!-- general form elements -->
                     <div class="card card-primary">
                         <div class="card-header">
-                            <h3 class="card-title">Quick Example</h3>
+                            <h3 class="card-title">Negociação</h3>
                         </div>
                         <!-- /.card-header -->
                         <!-- form start -->
                         <form asp-action="UploadTransaction" asp-controller="B3" method="post" enctype="multipart/form-data">
                             <div class="card-body">
-                                <div class="form-group">
-                                    <label for="IdFileName">File Name</label>
-                                    <input asp-for="FileName" type="text" class="form-control" id="IdFileName" placeholder="Enter email">
-                                </div>
                                 <div class="form-group">
                                     <label for="exampleInputFile">File input</label>
                                     <div class="input-group">
