--- a/src/CtrlMoney.UI.Web/Views/B3/UploadPosition.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/B3/UploadPosition.cshtml
@@ -32,7 +32,7 @@
                     <!-- general form elements -->
                     <div class="card card-primary">
                         <div class="card-header">
-                            <h3 class="card-title">Quick Example</h3>
+                            <h3 class="card-title">Posições</h3>
                         </div>
                         <!-- /.card-header -->
                         <!-- form start -->
