--- a/src/CtrlMoney.UI.Web/Views/IncomeTax/Index.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/IncomeTax/Index.cshtml
@@ -169,6 +169,7 @@
             var tr = $(this).closest('tr');
             var row = table.row(tr);
             var ticket = row.data().TicketCode;
+            var year = $('option:selected', $("#yearsList")).text();
 
             if (row.child.isShown()) {
                 // This row is already open - close it
@@ -177,7 +178,7 @@
             } else {
                 // Open this row
 
-                var url = '@Url.Action("Details","IncomeTax")?ticketCode=' + ticket;
+                var url = '@Url.Action("Details","IncomeTax")?ticketCode=' + ticket + '&year=' + year;
 
                 $.get(url, function(data) {
                     row.child(data).show();
