--- a/src/CtrlMoney.UI.Web/Views/IncomeTax/_PartialViewStocks.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/IncomeTax/_PartialViewStocks.cshtml
@@ -19,6 +19,7 @@
             <table class="table table-bordered">
                 <thead>
                     <tr>
+                        <th>TicketCode</th>
                         <th>Data</th>
                         <th>Transaction type</th>
                         <th>Quantidade</th>
@@ -31,6 +32,7 @@
                     @foreach (var item in Model.BrokerageHistoryVMs)
                     {
                         <tr>
+                            <td>@item.TicketCode</td>
                             <td>@item.TransactionDate</td>
                             <td>@item.TransactionType</td>
                             <td>@item.Quantity</td>
@@ -42,7 +44,8 @@
                 <tfoot>
                     <tr>
                         <th>Total</th>
-                         <th></th>
+                        <th></th>
+                        <th></th>
                         <th>@Model.Quantity</th>
                         <th></th>
                         <th>@Model.TotalValue</th>
