Apply changes for Details IncomeTax

--- a/src/CtrlMoney.UI.Web/Views/B3/UploadPosition.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/B3/UploadPosition.cshtml
@@ -39,8 +39,8 @@
                         <form asp-action="UploadPosition" asp-controller="B3" method="post" enctype="multipart/form-data">
                             <div class="card-body">
                                 <div class="form-group">
-                                    <label for="IdFileName">File Name</label>
-                                    <input asp-for="FileName" type="text" class="form-control" id="IdFileName" placeholder="Enter email">
+                                    <label for="IdFileDate">Date from position</label>
+                                    <input asp-for="FileName" type="text" class="form-control" id="IdFileDate" placeholder="Calendar Date from position">
                                 </div>
                                 <div class="form-group">
                                     <label for="exampleInputFile">File input</label>
