--- a/src/CtrlMoney.UI.Web/Views/IncomeTax/Index.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/IncomeTax/Index.cshtml
@@ -10,7 +10,7 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1>Advanced Form</h1>
+                    <h1>Income Tax</h1>
                 </div>
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
@@ -29,14 +29,14 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-header">
-                            <h3 class="card-title">Your historical</h3>
+                            <h3 class="card-title">Report</h3>
                         </div>
                         <!-- /.card-header -->
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label>Minimal</label>
+                                        <label>Ano-calendário</label>
                                         <select id="yearsList" class="form-control select2" style="width: 100%;">
                                             <option selected="selected">2022</option>
                                             <option>2021</option>
