--- a/src/CtrlMoney.UI.Web/Views/IncomeTax/_PartialViewStocks.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/IncomeTax/_PartialViewStocks.cshtml
@@ -1,21 +1,26 @@
 ﻿@model CtrlMoney.UI.Web.Models.IncomeTaxTicket
 
 <div class="col-md-6">
-    <div class="card card-default">
-        <div class="card-header">
-            <h3 class="card-title">
-                <i class="fas fa-money-check-alt"></i>
-                @Model.TicketCode - Escriturador: @Model.Bookkeeping
-            </h3>
-        </div>
-        <!-- /.card-header -->
-        <div class="card-body">
-            <ul class="list-unstyled">
+        <div class="card card-primary">
+            <div class="card-header">
+                <h3 class="card-title">
+                    <i class="fas fa-money-check-alt"></i>
+                    @Model.TicketCode - Escriturador: @Model.Bookkeeping
+                </h3>
+            </div>
+            <!-- /.card-header -->
+            <div class="card-body">
                 @foreach (var item in Model.ResumeBrokerageHistories)
                 {
-                    <li>@string.Format("{0} Unit {1} - {2}", item.Quantity, item.TotalValue, item.Year)</li>
+                    <strong><i class="fa-regular fa-calendar-days"></i> @item.Year </strong>
+
+                    <p class="text-muted">
+                        @string.Format("Unit {0} - {1}", item.Quantity, item.TotalValue)
+                    </p>
+                    <hr/>
                 }
-            </ul>            
+            </div>
+            <!-- /.card-body -->
             <table class="table table-bordered">
                 <thead>
                     <tr>
@@ -25,7 +30,7 @@
                         <th>Quantidade</th>
                         <th>Valor unit</th>
                         <th>Valor total</th>
-                        
+
                     </tr>
                 </thead>
                 <tbody>
@@ -37,7 +42,7 @@
                             <td>@item.TransactionType</td>
                             <td>@item.Quantity</td>
                             <td>@item.Price</td>
-                            <td>@item.TotalPrice</td>                            
+                            <td>@item.TotalPrice</td>
                         </tr>
                     }
                 </tbody>
@@ -53,8 +58,6 @@
                 </tfoot>
             </table>
         </div>
-        <!-- /.card-body -->
-    </div>
     <!-- /.card -->
 </div>
 <!-- /.col -->
