--- a/src/CtrlMoney.UI.Web/Views/B3/MovementIndex.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/B3/MovementIndex.cshtml
@@ -10,7 +10,7 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1>Earnings list</h1>
+                    <h1>Movements list</h1>
                 </div>
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
@@ -29,7 +29,7 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-header">
-                            <h3 class="card-title">Your historical</h3>
+                            <h3 class="card-title">Movements</h3>
                         </div>
                         <!-- /.card-header -->
                         <div class="card-body">
