--- a/src/CtrlMoney.UI.Web/Views/Shared/_Layout.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/Shared/_Layout.cshtml
@@ -318,7 +318,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
     <script src="~/lib/bootstrap-treeview/bootstrap-treeview.js"></script>
     <!-- CtrlMoney App -->
-    <script src="~/admin-lte/js/adminlte.min.js"></script>
+    <script src="~/admin-lte/js/adminlte.js"></script>
     <!-- AdminLTE for demo purposes -->
     <script src="~/admin-lte/js/demo.js"></script>
     <!-- Select2 -->
